cluster_deployments/kubeshark/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeshark
  labels:
    name: kubeshark
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/component: network-observability
