cluster_deployments/kubeshark/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeshark-ingress
  namespace: kubeshark
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: kubeshark.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubeshark-front
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubeshark-front
                port:
                  number: 80
